Fix screen header style on smaller screen devices

--- a/src/components/ScreenHeader/style.css
+++ b/src/components/ScreenHeader/style.css
@@ -111,7 +111,15 @@
 
 @media only screen and (max-width: 320px) {
   .screen-header-items-container {
-    padding-bottom: 9px;
+    padding: 16px 0 11px 0;
+  }
+
+  .info-button {
+    left: 17px;
+  }
+
+  .map-button {
+    right: 16px;
   }
 }
 
